# gst_core

./: CMakeLists.txt
src/capture/: v4l2_camera.c  v4l2_camera.h
src/core/: dma_buffer.c  dma_buffer.h
src/inference/: inference.cpp  inference.h  postprocess.cc
src/process/: gst_rga.c  gst_rga.h
src/stream/: gst_streamer.c  vision_engine.cpp  vision_engine.hpp
